# parodus2mockTr181

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  Makefile.am  NOTICE  README.md  configure.ac  mock_tr181.json
app/: Makefile  Makefile.am  main.c  webpa_client_connector.c  webpa_rpc.c  webpa_rpc.x
config/: webpa_cfg.json
etc/: mock_tr181.json
include/: wal.h
include/waldb/: waldb.h
scripts/: webpa.sh
source/webpacore/: Makefile  Makefile.am  configure.ac  websocket_mgr.c  wrp_mgr.c
source/webpacore/include/: websocket_mgr.h  wrp_mgr.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  ccsp.h  main.c  mock_tr181.json  mock_tr181_adapter.c  mock_tr181_adapter.h  mock_tr181_client.c  mock_tr181_client.h  mock_tr181_db.json  mock_tr181_json.h  mock_tr181_main.c  mock_tr181_small.json
src/wal/: Makefile.am  Makefile.in  wal.c
src/waldb/: Makefile.am  Makefile.in  waldb.cpp
systemd/: webpavideo.service
tests/: CMakeLists.txt  Makefile.am  simple.c
tests/waldb/: Makefile.am  webpadb_test.c
wal/: Makefile  Makefile.am  cosa_Webpa_dml.c  plugin_main.c  ssp_action.c  ssp_main.c  ssp_messagebus_interface.c  wal.c
wal/arch/intel_usg/boards/rdkb_arm/config/comcast/: WebpaAgent.xml
wal/include/: ssp_global.h  ssp_internal.h  ssp_messagebus_interface.h
